--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -34,8 +34,19 @@ li {
     margin-bottom: 0;
     padding-left: 15px;
     padding-right: 15px;
-}
 
+    @media screen and (min-width: 480px) {
+            width: 480px;
+        }
+    
+        @media screen and (min-width: 768px) {
+            width: 768px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            width: 1200px;
+        }
+}
 .section {
     width: 100%;
     padding-top: 94px;
