--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,7 +3,17 @@
     font-size: 36px;
     line-height: 1.2;
     text-align: center;
-    margin-bottom: 50px;
+    @media screen and (max-width:767px) {
+            margin-bottom: 30px;
+        }
+    
+        @media screen and (min-width:768px) {
+            margin-bottom: 30px;
+        }
+    
+        @media screen and (min-width:1200px) {
+            margin-bottom: 50px;
+        }
 }
 
 .client__list {
@@ -23,12 +33,20 @@
 
 .client__link {
 display: flex;
+    
+    @media screen and (max-width:767px) {
     width: 210px;
-
+        }
+    
+    @media screen and (min-width:768px) {
+    width: 226px;
+        }
+    
     @media screen and (min-width:1200px) {
-        width: 170px;
-    }
+    width: 170px;
+        }
 
+    
     height: 92px;
     justify-content: center;
     align-items: center;
