--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -22,19 +22,32 @@
 }
 
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 528px;
-    height: 581px;
-    border-radius: 4px;
-
-    background: var(--other-text-color);
-    box-shadow:
-        0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-
+    position: relative;
+        padding: 40px;
+        border-radius: 4px;
+    
+        background: #ffffff;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+            0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+        @media screen and (max-width:479px) {
+            margin: 93px 15px;
+        }
+    
+        @media screen and (min-width:480px) {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 450px;
+            transform: translate(-50%, -50%) scale(1);
+            transition: transform 250ms var(--time-function);
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 528px;
+            height: 581px;
+        }
+        
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms var(--time-function);
     overflow: auto;
