--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -28,7 +28,6 @@ li {
 }
 
 .container {
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
@@ -308,6 +307,8 @@ img {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
+    margin-top: 16px;
+    margin-bottom: 16px;
   }
 }
 
@@ -430,7 +431,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   gap: 10px;
-  color: var(--main-font-color);
+  color: var(--primary-text-color);
   fill: currentColor;
   font-weight: 500;
   font-size: 12px;
@@ -840,7 +841,7 @@ img {
   display: inline-block;
   width: 100%;
   margin-bottom: 32px;
-  color: var(--main-font-color);
+  color: var(--primary-text-color);
   font-weight: 500;
   font-size: 22px;
   line-height: 1.1818181818;
@@ -857,7 +858,7 @@ img {
 }
 
 .mobile-menu__contact-mail {
-  color: var(--main-font-color);
+  color: var(--primary-text-color);
   font-weight: 500;
   font-size: 22px;
   line-height: 1.1818181818;
