--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -14,6 +14,7 @@
 
 .features__item {
     width: 100%;
+    margin-bottom: 30px;
 
     @media screen and (min-width:768px) {
         width: 354px;
@@ -60,6 +61,8 @@
 
 .features__text {
     width: 100%;
+    color: var(--primary-text-color);
+    font-size: 14px;
 
     line-height: 1.71;
     letter-spacing: 0.03em;
