--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -15,6 +15,8 @@
             display: flex;
             justify-content: space-between;
             flex-grow: 1;
+            margin-top: 16px;
+            margin-bottom: 16px;
         }
     }
 }
@@ -125,7 +127,7 @@
     align-items: center;
     gap: 10px;
     
-    color: var(--main-font-color);
+    color: var(--primary-text-color);
     fill: currentColor;
     font-weight: 500;
     font-size: 12px;
