--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -10,6 +10,16 @@
     letter-spacing: 0.03em;
     text-align: center;
     margin-bottom: 50px;
+    @media screen and (max-width:767px) {
+            margin-bottom: 30px;
+        }
+    
+        @media screen and (min-width:768px) {
+            margin-bottom: 30px;
+        }
+          @media screen and (min-width:1200px) {
+            margin-bottom: 50px;
+        }
 }
 
 .team {
@@ -31,7 +41,7 @@
 }
 
 .team__item {
-    width: 270px;
+   
     background: #FFFFFF;
     box-shadow:
         0px 1px 3px rgba(0, 0, 0, 0.12),
