--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -5,14 +5,17 @@
     text-align: center;
     @media screen and (max-width:767px) {
             margin-bottom: 30px;
+            font-size: 28px;
         }
     
         @media screen and (min-width:768px) {
             margin-bottom: 30px;
+            font-size: 28px;
         }
     
         @media screen and (min-width:1200px) {
             margin-bottom: 50px;
+            font-size: 36px;
         }
 }
 
