--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -59,6 +59,7 @@
 
      color: var(--secondory-font-color);
      font-weight: 500;
+     font-size: 14px;
      line-height: 1.14;
      letter-spacing: 0.02em;
      transition: color 250ms var(--time-function);
